# structure

./: CMakeLists.txt  main.cpp
cmake/: BpSerializersConfig.cmake  BpStructureConfig.cmake  FindJsonCpp.cmake
cmake/JsonCpp/: JsonCppConfig.cmake
include/: serializer.hpp  structure.hpp  variant.hpp
include/serializers/: dcm_buf.hpp  json.hpp  json_arduino.hpp
package/deb/: build.sh
package/deb/debian/: changelog  control  rules
serializers/: dcm_buf.cpp  dcm_buf.hpp  json.cpp  json.hpp  json_arduino.cpp  serializer.cpp  serializer_iterators.cpp  structure.cpp  structure_iterators.cpp
src/: structure.cpp  structure_iterators.cpp  structure_specializations.cpp
src/serializers/: dcm_buf.cpp  json.cpp  json_arduino.cpp
tests/: serializer_test.cpp  struct_test.cpp  test_json.cpp  test_struct.cpp
